# deindentor

./: Cargo.toml  README.md  index.html
pkg/: deindentor.d.ts  deindentor.js  deindentor_bg.wasm  deindentor_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
tests/: unit.rs
