[package]
name = "deindentor"
version = "1.0.1"
edition = "2021"
authors = ["yaxley-peaks <epiclycoolgaemer@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to reverse indentation in a file."
readme = "README.md"
homepage = "https://github.com/yaxley-peaks/deindentor"
repository = "https://github.com/yaxley-peaks/deindentor"
keywords = ["cli", "formatting", "indentation", "indent"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }